Fixed meal cards alignments

--- a/frontend/src/app/components/landing/landing.component.css
+++ b/frontend/src/app/components/landing/landing.component.css
@@ -11,3 +11,12 @@
   display: inline-block;
   width: 50px;
 }
+
+.meal-card {
+  width: 100%;
+  height: 100%;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
